<resources>
    <string name="app_name">WhatsIns</string>
    <string name="regName">Name</string>
    <string name="regPassword">Password</string>
    <string name="regPassword2">Confirm Password</string>
    <string name="regEmail">Email</string>
    <string name="regLogin">Login</string>
    <string name="nav_follow">Follow</string>
    <string name="nav_discover">Discover</string>
    <string name="nav_post">Post</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_user">User</string>
    <string name="register_question">Already Have account?</string>
    <string name="start_register">Register</string>
    <string name="start_login">Login</string>
    <string name="add_comment_hint">add comment</string>
    <string name="send_comment">send</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="post_btn">Post</string>
    <string name="post_description">Description</string>
    <string name="profile_posts">Posts</string>
    <string name="profile_following">Following</string>
    <string name="profile_followers">Followers</string>
    <string name="search_hint">Search..</string>
    <string name="post_detail_title">Edit Description</string>
    <string name="post_detail_positive_button">Edit</string>
    <string name="post_detail_neutralBtn">Cancel</string>
    <string name="login_error_email">Email already used</string>
    <string name="login_error_not_correct">Email/password not correct</string>
    <string name="login_hint_1">Having account? Login!</string>
    <string name="login_hint_2">new user? Join us!</string>
    <string name="profile_edit_profile_btn">Edit Profile</string>
    <string name="post_detail_more_edit">Edit</string>
    <string name="post_detail_more_delete">Delete</string>
    <string name="profile_menu_logout">Logout</string>
    <string name="descover_square">Square</string>
    <string name="descover_search">Search</string>
    <string name="register_email_not_correct">Email not validate</string>
    <string name="post_img_wrong">No image Selected</string>

</resources>
