<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    <item android:title="@string/nav_follow"-->
<!--        android:id="@+id/bottomNav_home"-->
<!--        android:icon="@drawable/ic_home"/>-->

    <item android:title="@string/nav_discover"
        android:id="@+id/bottomNav_discover"
        android:icon="@drawable/twotone_search_black_24"
        app:showAsAction="ifRoom"
        />

<!--    <item android:title="@string/nav_post"-->
<!--        android:id="@+id/bottomNav_post"-->
<!--        android:icon="@drawable/ic_post"/>-->

    <item android:title="@string/nav_notification"
        android:id="@+id/bottomNav_notify"
        android:icon="@drawable/ic_notifications"
        app:showAsAction="ifRoom"/>

    <item android:title="@string/nav_user"
        android:id="@+id/bottomNav_user"
        android:icon="@drawable/twotone_person_black_24"
        app:showAsAction="ifRoom"/>

</menu>